# OwlishTarn

./: .gitignore  README.md  package-lock.json  package.json
HH/: compose.yaml
HundredHeroines/: main.py  pyproject.toml
HundredHeroines/ref/: bio-ext.rdf.xmp  vra.html
config/: default.js
nailsworth/: .gitignore  main.py  pyproject.toml
playground/: discovery-cdc-state.json  ducky.py  pyproject.toml
rfc6902/: pyproject.toml
rfc6902/examples/: diff.py  mule.py
rfc6902/src/rfc6902/: __init__.py  diff.py  patch.py  pointer.py  types.py  versioned.py
