[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[recommended]>=0.11.23",
    "via-jsonpath",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
via-jsonpath = { git = "https://github.com/AndyA/via-jsonpath" }
