[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[recommended]>=0.11.23",
    "pycouchdb>=1.16.0",
    "via-jsonpath",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
via-jsonpath = { path = "../../Python/via-jsonpath", editable = true }

[tool.marimo.save]
autosave_delay = 1000
autosave = "after_delay"
format_on_save = true
